--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "debounce-setdata",
-  "version": "1.0.0",
-  "description": "debounce-setdata",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/gintamamadao/debounce-setdata.git"
-  },
-  "author": "gintamamadao",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/gintamamadao/debounce-setdata/issues"
-  },
-  "homepage": "https://github.com/gintamamadao/debounce-setdata#readme"
+    "name": "debounce-setdata",
+    "version": "1.0.0",
+    "description": "debounce-setdata",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/gintamamadao/debounce-setdata.git"
+    },
+    "author": "gintamamadao",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/gintamamadao/debounce-setdata/issues"
+    },
+    "homepage": "https://github.com/gintamamadao/debounce-setdata#readme",
+    "devDependencies": {
+        "@babel/core": "^7.4.5",
+        "@babel/preset-env": "^7.4.5",
+        "jest": "^24.8.0",
+        "rollup": "^1.14.3",
+        "rollup-plugin-babel": "^4.3.2",
+        "rollup-plugin-commonjs": "^10.0.0"
+    }
 }
