--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "description": "debounce-setdata",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest",
+        "dev": "node_modules/.bin/rollup -c ./build/rollup.dev.config.js -w",
+        "build": "node_modules/.bin/rollup -c ./build/rollup.bundle.config.js"
     },
     "repository": {
         "type": "git",
