--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "debounce-setdata",
     "version": "1.0.0",
     "description": "debounce-setdata",
-    "main": "index.js",
+    "main": "./dist/debounce-setdata.js",
     "scripts": {
         "test": "jest",
         "dev": "node_modules/.bin/rollup -c ./build/rollup.dev.config.js -w",
@@ -21,7 +21,6 @@
     "devDependencies": {
         "@babel/core": "^7.4.5",
         "@babel/preset-env": "^7.4.5",
-        "jest": "^24.8.0",
         "rollup": "^1.14.3",
         "rollup-plugin-babel": "^4.3.2",
         "rollup-plugin-commonjs": "^10.0.0"
