--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "debounce-setdata",
-    "version": "1.1.0",
-    "description": "debounce-setdata",
+    "version": "1.1.1",
+    "description": "对微信小程序 setData 的防抖节流封装",
     "main": "./dist/debounce-setdata.js",
     "scripts": {
         "test": "jest",
